Modularización del proyecto + avances

--- a/main.tex
+++ b/main.tex
@@ -4,6 +4,7 @@
 \usepackage[table, x11names]{xcolor}
 \usepackage[bookmarks]{hyperref}
 \usepackage{dsfont}
+\usepackage{subfiles}
 
 \title{Resumen general de Matemáticas Discretas}
 \author{Andrés Cabezas y Sebastián Poblete}
@@ -12,611 +13,16 @@
 
 \maketitle
 
-\section{¿Qué son las matemáticas discretas?}
-``El lenguaje necesario para entender y modelar la computación''. Las matemáticas discretas usan conjuntos finitos e infinitos al momento de estudio. Modelan los objetos y conceptos abstractos de las matemáticas que pueden ser representados dentro de un computador.
-\subsection{Lógica}
-La lógica consiste en el uso y estudio del razonamiento válido. Para esto, es necesario un lenguaje, pero esto también supone un problema: Los lenguajes que los humanos hablan tiene ciertas subjetividades y diferencias entre si, lo que conduce a errores al momento de usar la lógica. Para resolver esto, es necesario usar un lenguaje formal.\\
-Durante el curso, se estudiarán dos lógicas (o lenguajes), sin embargo, existen muchos más
-\begin{itemize}
-    \item Lógica Proposicional
-    \item Lógica de Predicados
-\end{itemize}
-\textbf{¿Para qué son necesarias estas lógicas?} Recordemos nuestro objetivo. Queremos usar esto para realizar nuestro razonamiento matemático. De esta forma, podemos definir correctamente objetos matemáticos, teorías matemáticas y realizar demostraciones más formales
-
-\section{Lógica Proposicional (LP)}
-\subsection{Proposición}
-Una proposición consiste en una afirmación, la cual puede ser \textit{verdadera (1)} o \textit{falsa (0)}.\\
-Para denotar proposiciones básicas, usaremos letras mayusculas (Ej.: P, Q, R\ldots)
-
-\subsection{Conectivos Lógicos}
-La LP usa conectivos sencillos para conseguir formar proposiciones más complejas. \\
-\[
-    \begin{tabular}{|c|c|c|c|}
-        \hline
-        Conectivos & Nombre & Uso & Significado\\ \hline
-        $\wedge$ & Conjunción & $P \wedge{}Q$ & P y Q \\
-        $\vee$ & Disyunción & $P \vee{}Q$ & P o Q \\
-        $\neg$ & Negación & $\neg{}P$ & No P \\
-        $\rightarrow$ & Condicional & $P \rightarrow{}Q$ & Si P, entonces Q \\
-        $\leftrightarrow$ & Bicondicional & $P \leftrightarrow{}Q$ & P, si y solo si, Q \\ \hline
-    \end{tabular}
-\]
-\subsubsection{Conjunción ($\wedge$)}
-El valor de verdad de una conjunción es \textit{verdadero} si ambas proposiciones (a cada lado del signo) son verdaderas. En cualquier otro caso, es \textit{falso}.
-\[
-    \begin{tabular}{cc|c}
-        P & Q & $P \wedge{}Q$\\ \hline
-        0 & 0 & 0\\
-        0 & 1 & 0\\
-        1 & 0 & 0\\
-        1 & 1 & 1
-    \end{tabular}
-\]
-
-\subsubsection{Disyunción ($\vee$)}
-El valor de verdad de una disyunción es \textit{verdadero} si al menos una de las proposiciones (a cada lado del signo), es verdadera.
-\[
-    \begin{tabular}{cc|c}
-        P & Q & $P \vee{}Q$\\ \hline
-        0 & 0 & 0\\
-        0 & 1 & 1\\
-        1 & 0 & 1\\
-        1 & 1 & 1
-    \end{tabular}
-\]
-
-\subsubsection{Negación ($\neg$)}
-El valor de verdad corresponde al opuesto del valor entregado (a la derecha del signo)
-\[
-    \begin{tabular}{c|c}
-        P & $\neg{}P$\\ \hline
-        1 & 0\\
-        0 & 1 
-    \end{tabular}
-\]
-
-\subsubsection{Condicional ($\rightarrow$)}
-El valor de verdad de una condicional del tipo $P \rightarrow{}Q$ es \textit{falso} si P es verdadero, pero Q es falso. En cualquier otro caso, es \textit{verdadero}.\\
-\[
-    \begin{tabular}{cc|c}
-        P & Q & $P \rightarrow{}Q$\\ \hline
-        0 & 0 & 1\\
-        0 & 1 & 1\\
-        1 & 0 & 0\\
-        1 & 1 & 1
-    \end{tabular}
-\]
-Hint: \textit{``Si P es verdadero, entonces necesariamente Q es verdadero''}. Si P es verdadero, entonces Q deberá ser verdadero para tener un valor de verdad \textit{verdadero}. Si P es falso, entonces de forma automática el valor de verdad es \textit{verdadero}.
-
-\subsubsection{Bicondicional ($\leftrightarrow$)}
-El valor de verdad de una bicondicional es verdadero si ambas proposiciones (a ambos lados del signo) son iguales (en otras palabras, ambas verdaderas o ambas falsas).
-\[
-    \begin{tabular}{cc|c}
-        P & Q & $P \leftrightarrow{}Q$\\ \hline
-        0 & 0 & 1\\
-        0 & 1 & 0\\
-        1 & 0 & 0\\
-        1 & 1 & 1
-    \end{tabular}
-\]
-
-\subsection{Proposición Compuesta}
-Una proposición es compuesta si corresponde a la negación ($\neg$), conjunción ($\wedge$), disyunción($\vee$), condicional($\rightarrow$) o bicondicional( $\leftrightarrow$ ) de proposiciones compuestas.\\
-Como por ejemplo
-
-
-$$P \wedge (Q \vee{} R)$$
-$$\neg(P \vee (\neg{}R \wedge{} Q))$$
-$$(P \rightarrow{} Q) \leftrightarrow{} (P \wedge{} Q)$$
-
-
-
-Si se desea obtener el valor de verdad de alguna proposición compuesta, se debe evaluar de forma recursiva cada uno de los conectivos lógicos presentes.\\
-Por ejemplo:
-
-$$\neg(P \vee (\neg{} R \wedge{} Q)) \textrm{ con P = 0, Q = 1 y R = 0}$$
-$$\neg(0 \vee (\neg{} 0 \wedge{} 1))$$
-$$\neg(0 \vee (1 \wedge{} 1))$$
-$$\neg(0 \vee 1)$$
-$$\neg{}1$$
-$$0$$
-\\
-$$(P \rightarrow{} Q) \leftrightarrow{} (P \wedge{} Q) \text{ con P = 1 y Q = 0}$$
-$$(1 \rightarrow{} 0) \leftrightarrow{} (1 \wedge{} 0)$$
-$$0 \leftrightarrow{} 0$$
-$$1$$
-
-\subsubsection{Paréntesis y prioridad}
-El orden de prioridad entre conectivos lógicos, al momento de evaluar proposiciones compuestas, será el siguiente:
-\[
-    \begin{tabular}{c|c}
-        Conectivo & Precedencia\\ \hline
-        $\neg$ & 1\\
-        $\wedge$ & 2\\
-        $\vee$ & 3\\
-        $\rightarrow$ & 4\\
-        $\leftrightarrow$ & 5
-    \end{tabular}
-\]
-
-\section{Formulas y Valuaciones}
-\subsection{Variables Proposicionales}
-Una variable proposicional es una variable que puede ser reemplazada con los valores 1 o 0. Generalmente son representadas con una letra minúscula (Amiga eri boolean)
-
-\subsection{Formulas Proposicionales}
-Una formula proposicional es una formula que puede ser
-\begin{itemize}
-    \item Una variable proposicional
-    \item Los valores 1 o 0
-    \item Una combinación con conectivos lógicos
-\end{itemize}
-Generalmente son representadas con letras griegas (Ej.: $\alpha$)\\
-Ejemplos:
-$$\alpha{}(p,q,r) := p \wedge{}(q \rightarrow{} r)$$
-$$\beta{}(p,q) := (p \wedge{} \neg{}q) \vee{} (\neg{}p \wedge{} 1)$$
-
-\section{Equivalencia Lógica}
-\label{sec:equiv_logica}
-\subsection{Definición}
-Si tenemos dos formulas proposicionales con las mismas variables proposicionales
-$$\alpha{}(p_{1},\ldots{},p_{n}) \text{ y } \beta{}(p_{1},\ldots{},p_{n})$$
-Entonces, $\alpha$ y $\beta$ serán logicamente equivalentes
-$$\alpha \equiv \beta$$
-si para toda valuación posible $(v_{1}, \ldots{},v_{n})$ se cumple que:
-$$\alpha{}(v_{1}, \ldots{},v_{n}) = \beta{}(v_{1}, \ldots{},v_{n})$$
-Ejemplo:
-Para las fórmulas $p \wedge (q \vee r)$ y $(p \wedge q) \vee (p \wedge r)$ se tiene la siguiente tabla de verdad:
-\[
-    \begin{tabular}{ccc|cc}
-        p & q & r & $p \wedge (q \vee r)$ & $(p \wedge q) \vee (p \wedge r)$ \\ \hline
-        0 & 0 & 0 & 0 & 0\\
-        0 & 0 & 1 & 0 & 0\\
-        0 & 1 & 0 & 0 & 0\\
-        0 & 1 & 1 & 0 & 0\\
-        1 & 0 & 0 & 0 & 0\\
-        1 & 0 & 1 & 1 & 1\\
-        1 & 1 & 0 & 1 & 1\\
-        1 & 1 & 1 & 1 & 1
-    \end{tabular}
-\]
-Como ambas formulas son equivalentes para toda valuación, entonces:
-$$p \wedge (q \vee r) \equiv (p \wedge q) \wedge (p \wedge r)$$
-
-\subsection{Equivalencias útiles}
-\label{sec:equiv_logica_util}
-\begin{enumerate}
-    \item Conmutatividad: 
-                        $$p \wedge q \equiv q \wedge p$$ 
-                        $$p \vee q \equiv q \vee p$$
-    \item Asociatividad: 
-                        $$p \wedge (q \wedge r) \equiv (p \wedge q) \wedge r$$
-                        $$p \vee (q \vee r) \equiv (p \vee q) \vee r$$
-    \item Idempotente:
-                        $$p \wedge p \equiv p$$
-                        $$p \vee p \equiv p$$
-    \item Doble negación:
-                        $$\neg\neg p \equiv p$$
-    \item Distributividad:
-                        $$p \wedge (q \vee r) \equiv (p \wedge q) \vee (p \wedge r)$$
-                        $$p \vee (q \wedge r) \equiv (p \vee q) \wedge (p \vee r)$$
-    \item De Morgan:
-                        $$\neg (p \wedge q) \equiv \neg p \vee \neg q$$
-    \item Implicación:
-                        $$p \rightarrow q \equiv \neg p \vee q$$
-                        $$p \rightarrow q \equiv \neg q \rightarrow \neg p$$
-                        $$p \leftrightarrow q \equiv (p \rightarrow q) \wedge (q \rightarrow p)$$
-    \item Absorción:
-                        $$p \vee (p \wedge q) \equiv p$$
-                        $$p \wedge (p \vee q) \equiv p$$
-    \item Identidad:
-                        $$p \vee 0 \equiv p$$
-                        $$p \wedge 1 \equiv p$$
-    \item Dominación:
-                        $$p \wedge 0 \equiv 0$$
-                        $$p \vee 1 \equiv 1$$
-\end{enumerate}
-
-\section{Operadores Generalizados}
-Debido a que $\vee$ y $\wedge$ son operadores asociativos, podemos escribir las siguientes generalizaciones
-$$\bigvee_{i=1}^{n} p_{i} \equiv{} p_{1} \vee{} p_{2} \vee{} \ldots{} \vee{} p_{n}$$
-$$\bigwedge_{i=1}^{n} p_{i} \equiv{} p_{1} \wedge{} p_{2} \wedge{} \ldots{} \wedge{} p_{n}$$
-Además, podemos saltarnos los parentesis al momento de escribir estas operaciones. Por ejemplo:
-$$(p_{1} \vee{} p_{2}) \vee{} p_{3} \equiv{} p_{1} \vee{} (p_{2} \vee{} p_{3}) \equiv{} p_{1} \vee{} p_{2} \vee{} p_{3}$$
-$$(p_{1} \wedge{} p_{2}) \wedge{} p_{3} \equiv{} p_{1} \wedge{} (p_{2} \wedge{} p_{3}) \equiv{} p_{1} \wedge{} p_{2} \wedge{} p_{3}$$
-
-
-\section{Formas normales}
-Primero, consideremos que un \textit{literal} es una variable proposicional o la negación de una variable.\\
-\subsection{Forma Normal Disyuntiva (DNF)}
-Una formula $\alpha$ está en DNF si es una disyunción de conjunciones de literales.
-$$\alpha{} = \beta{}_{1} \vee{} \beta{}_{2} \vee{} \ldots{} \vee{} \beta{}_{k}$$
-donde $\beta{}_{i} = (l_{i_{1}} \wedge{} \ldots{} \wedge{} l_{i_{k_{i}}})$ y $l_{i_{1}}, \ldots{}, l_{i_{k_{i}}}$ son literales.\\
-Por si esta forma de anotarlo es muy complicada de entender, en palabras más simples, nos referimos a que $\alpha$ está en DNF si es que es una formula proposicional tal que este compuesta por disyunciones de otras formulas, las cuales son conjunciones de variables proposicionales.\\
-Ejemplo:
-    $$(p \wedge{} \neg{} q) \vee{} (\neg{} p \wedge{} p \wedge{} s) \vee{} (r \wedge{} \neg{} s)$$
-
-\subsection{Forma Normal Conjuntiva (CNF)}
-Una formula $\alpha$ está en CNF si es una conjuncion de disyunciones de literales.
-$$\alpha{} = \beta{}_{1} \wedge{} \beta{}_{2} \wedge{} \ldots{} \wedge{} \beta{}_{k}$$
-donde $\beta{}_{i} = (l_{i_{1}} \vee{} \ldots{} \vee{} l_{i_{k_{i}}})$ y $l_{i_{1}}, \ldots{}, l_{i_{k_{i}}}$ son literales.\\
-Al final, la idea de la CNF es algo así como una ``forma inversa'' de la DNF, ya que se invierte que es lo que se encuentra en disyunción y lo que se encuentra en conjunción.\\
-Ejemplo:
-    $$(p \vee{} \neg{} q) \wedge{} (\neg{} p \vee{} p \vee{} s) \wedge{} (r \vee{} \neg{} s)$$
-
-\subsection{Formas normales y Equivalencia lógica}
-Tenemos el siguiente teorema:
-\begin{enumerate}
-    \item Toda formula $\alpha$ es lógicamente equivalente a una formula en DNF.
-    \item Toda formula $\alpha$ es lógicamente equivalente a una formula en CNF.
-\end{enumerate}
-Debido a las limitadas herramientas de demostración que tenemos por el momento, la demostración será escrita a futuro en esta parte del resumen. En caso de estar estudiando con este resumen, no considere la demostración hasta tener las herramientas suficientes como para demostrar.
-
-\section{Consecuencia Lógica}
-Sea $\Sigma{} = \{\alpha{}_{1}, \ldots{}, \alpha{}_{m} \}$ un conjunto de formulas con variables $p_{1}, \ldots{}, p_{n}$. Diremos que $\alpha$ es \textit{consecuencia lógica} de $\Sigma$ si, y solo si, para toda valuación $v_{1}, \ldots{}, v_{n}$ se tiene que
-\[ \text{si } [ \bigwedge_{i=1}^{m} \alpha{}_{i} ] (v_{1}, \ldots{}, v_{n}) = 1 \text{, entonces } \alpha{}(v_{1}, \ldots{}, v_{n}) = 1 \]
-Esto se denota como $\Sigma{} \models{} \alpha$ (leido como $\alpha$ \textit{es consecuencia lógica de} $\Sigma$)\\
-Posiblemente no quede del todo claro el significado de esta formula, pero en palabras, lo que queremos decir es que si tenemos una valuación, tal que al aplicarla a toda formula presente en el conjunto retorne 1, entonces si una formula es consecuencia lógica del conjunto, esta debe también retornar 1.\\
-Si lo intentamos ver con una tabla de verdad, a modo de ejemplo, una consecuencia lógica se vería de la siguiente 
-forma:
-\[
-    \begin{tabular}{ccc|cccc|c}
-        $v_{1}$ & $\cdots{}$ & $v_{n}$ & $\alpha{}_{1}$ & $\alpha{}_{2}$ & $\cdots{}$ & $\alpha{}_{m}$ & $\alpha$ \\ \hline
-                             $\cdots{}$ & $\cdots{}$ & $\cdots{}$ & 1 & 1 & $\cdots$ & 0 & 1 \\
-        \rowcolor{lightgray} $\cdots{}$ & $\cdots{}$ & $\cdots{}$ & 1 & 1 & $\cdots$ & 1 & 1 \\
-                             $\cdots{}$ & $\cdots{}$ & $\cdots{}$ & 0 & 0 & $\cdots$ & 1 & 0 \\
-    \end{tabular}
-\]
-En donde tenemos una fila marcada en gris, en donde podemos ver que todas las formulas del conjunto $\Sigma$ son iguales a 1 y tambien que $\alpha$ es 1. Si esto se cumple y no sucede que tenemos todas las formulas de la izquierda con unos, y el alpha de la derecha con un 0, entonces tenemos consecuencia lógica.\\
-Otro ejemplo:
-\[
-    \begin{tabular}{ccc|cccc|c}
-        $v_{1}$ & $\cdots{}$ & $v_{n}$ & $\alpha{}_{1}$ & $\alpha{}_{2}$ & $\cdots{}$ & $\alpha{}_{m}$ & $\alpha$ \\ \hline
-                             $\cdots{}$ & $\cdots{}$ & $\cdots{}$ & 1 & 1 & $\cdots$ & 0 & 1 \\
-        \rowcolor{lightgray} $\cdots{}$ & $\cdots{}$ & $\cdots{}$ & 1 & 1 & $\cdots$ & 1 & 0 \\
-                             $\cdots{}$ & $\cdots{}$ & $\cdots{}$ & 0 & 0 & $\cdots$ & 1 & 0 \\
-    \end{tabular}
-\]
-En este caso, ya no hay consecuencia lógica, debido a que no se cumple la condición establecida antes. La fila marcada en gris, tiene un 0 en la formula final, lo que nos dice que no es consecuencia lógica.\\
-\textbf{NOTA:} Si tenemos un conjunto $\Sigma$ tal que es imposible obtener una fila con solo unos, entonces \textbf{cualquier cosa} puede ser consecuencia lógica de $\Sigma$. ¡Usar con sabiduria para demostraciones!
-
-\subsection{Consecuencias lógicas clásicas}
-\subsubsection{Modus ponens}
-$$ \{ p, p \rightarrow{} q \} \models{} q $$
-\[
-    \begin{tabular}{cc|cc|c}
-        p & q & $p$ & $p \rightarrow{} q$ & $q$ \\ \hline
-        0 & 0 & 0 & 1 & 0 \\
-        0 & 1 & 0 & 1 & 0 \\
-        1 & 0 & 1 & 0 & 0 \\
-        \rowcolor{lightgray} 1 & 1 & 1 & 1 & 1 \\
-    \end{tabular}
-\]
-
-\subsubsection{Modus tollens}
-$$\{ \neg{} q, p \rightarrow q \} \models{} \neg{} p$$
-\[
-    \begin{tabular}{cc|cc|c}
-        p & q & $p$ & $p \rightarrow{} q$ & $q$ \\ \hline
-        \rowcolor{lightgray} 0 & 0 & 1 & 1 & 1 \\
-        0 & 1 & 0 & 1 & 1 \\
-        1 & 0 & 1 & 0 & 0 \\
-        1 & 1 & 0 & 1 & 0 \\
-    \end{tabular}
-\]
-
-\subsubsection{Resolución}
-$$\{ p \vee{} q, \neg{} q \vee{} r \} \models{} p \vee{} r$$
-\[
-    \begin{tabular}{ccc|cc|c}
-        p & q & r & $p \vee{} q$ & $\neg{} q \vee{} r$ & $p \vee{} r$ \\ \hline
-        0 & 0 & 0 & 0 & 1 & 0\\
-        0 & 0 & 1 & 0 & 1 & 1\\
-        0 & 1 & 0 & 1 & 0 & 0\\
-        \rowcolor{lightgray} 0 & 1 & 1 & 1 & 1 & 1\\
-        \rowcolor{lightgray} 1 & 0 & 0 & 1 & 1 & 1\\
-        \rowcolor{lightgray} 1 & 0 & 1 & 1 & 1 & 1\\
-        1 & 1 & 0 & 1 & 0 & 1\\
-        \rowcolor{lightgray} 1 & 1 & 1 & 1 & 1 & 1\\
-    \end{tabular}
-\]
-
-\subsection{Trucos de consecuencia lógica}
-\begin{enumerate}
-    \item $\{ 1 \} \models{} \alpha{}$, entonces $\alpha$ es una tautología
-    \item Si $\alpha$ es una contradicción, entonces $\{ \alpha{} \} \models{} \beta{}$
-    \item Si $\Sigma{} \models{} \alpha{}$, entonces $\Sigma{} \cup{} \{ \beta{} \} \models{} \alpha{}$ para todo $\beta$
-    \item Si $\Sigma{} \cup{} \{ \alpha{} \} \models{} \beta{}$ y $\Sigma{} \models{} \alpha{}$, entonces $\Sigma{} \models{} \beta{}$
-\end{enumerate}
-
-\subsection{Más consecuencias lógicas clásicas}
-A continuación, vamos a mostrar más consecuencias lógicas, sumando a la lista en 7.1
-\begin{enumerate}
-    \item Modus ponens: $ \{ p, p \rightarrow{} q \} \models{} q $
-    \item Modus tollens: $\{ p \vee{} q, \neg{} q \vee{} r \} \models{} p \vee{} r$
-    \item Silogismo: $\{ p \rightarrow{} q, q \rightarrow{} r \} \models{} p \rightarrow{} r$
-    \item Silogismo disyuntivo: $\{ p \vee{} q, \neg{} p \} \models{} q$
-    \item Conjunción: $\{ p, q \} \models{} p \wedge{} q$
-    \item Simplificación Conjuntiva: $\{ p \wedge{} q \} \models p$
-    \item Amplificación Disyuntiva: $ \{ p \} \models{} p \vee{} q$
-    \item Demostración Condicional: $\{ p \wedge{} q, p \rightarrow{} (q \rightarrow{} r) \} \models{} r$
-    \item Demostración por casos: $\{ p \rightarrow{} r, q \rightarrow{} r \} \models (p \vee{} q) \rightarrow{} r$
-\end{enumerate}
-
-\subsection{Composición y Consecuencia lógica}
-\subsubsection{Definición}
-Considerando un conjunto $\Sigma{} = \{ \alpha{}_{1}(p_{1}, \ldots{}, p_{n}), \ldots{}, \alpha{}_{m}(p_{1}, \ldots{}, p_{n}) \}$ y $\beta{}_{1}, \ldots{}, \beta{}_{n}$ como formulas proposicionales.\\
-Una composición $\Sigma{}(\beta{}_{1}, \ldots{}, \beta{}_{n})$, consiste en el conjunto resultante de valuar cada formula de $\Sigma$ con $\beta{}_{1}, \ldots{}, \beta{}_{n}$. En otras palabras:\\
-\large $$\Sigma{}(\beta{}_{1}, \ldots{}, \beta{}_{n}) = \{ \alpha{}_{1}(\beta{}_{1}, \ldots{}, \beta{}_{n}), \ldots{}, \alpha{}_{m}(\beta{}_{1}, \ldots{}, \beta{}_{n}) \}$$
-\normalsize
-
-\subsubsection{Teorema}
-Sea $\Sigma$ un conjunto de formulas (similar al de antes), y $\alpha{}, \beta{}_{1}, \ldots{}, \beta{}_{n}$, formulas proposicionales. Si $\Sigma{} \models{} \alpha{}$, entonces $\Sigma{}(\beta{}_{1}, \ldots{}, \beta{}_{n}) \models{} \alpha{}(\beta{}_{1}, \ldots{}, \beta{}_{n})$.
-
-\section{Satisfacibilidad}
-\subsection{Satisfacción de un conjunto de formulas}
-Se dice que una formula proposicional $\alpha(p_{1}, \ldots{}, p_{n})$ es satisfacible si existe una valuación $v_{1}, \ldots{}, v_{n}$ tal que
-$$\alpha{}(v_{1}, \ldots{}, v_{n}) = 1$$
-Un conjunto $\Sigma = \{ \alpha{}_{1}, \ldots{}, \alpha{}_{m} \}$ con variables $p_{1}, \ldots{}, p_{n}$ se dice que es satisfacible si existe una valuación $v_{1}, \ldots{}, v_{n}$ tal que
-$$[ \bigwedge_{i = 1}^{m} = \alpha{}_{i} ] (v_{1}, \ldots{}, v_{n}) = 1$$
-Si un conjunto o formula no es satisfacible, entonces se dice que es inconsistente.\\
-
-\subsection{Consecuencia lógica vs satisfacibilidad}
-\textbf{Teorema:} $\{\alpha{}_{1}, \ldots{}, \alpha{}_{m}\} \models{} \alpha{}$ si y solo si $\{ \alpha{}_{1}, \ldots{}, \alpha{}_{m}, \neg{} \alpha \}$ es inconsistente.
-
-\subsection{Satisfacibilidad y representación de problemas}
-\textbf{Problema:} Dada una formula $\alpha$, verificar si es o no satisfacible.\\
-¿Como podemos resolver este problema? Si bien es posible ir probando todas las posibles valuaciones para verificar, es un proceso largo y poco eficiente. Tristemente, la respuesta a este problema, es que no es posible. No existe ningun otro método al momento de verificar si una formula es o no es consistente.
-
-\section{Lógica de Predicados}
-Hasta ahora, se ha trabajado unicamente con Lógica Proposicional. Esta funciona bien, pero tiene algunas limitaciones que vuelven imposible modelar algunas situaciones.
-\begin{itemize}
-    \item No tiene objetos. Solo se pueden usar proposiciones.
-    \item No tiene predicados.
-    \item No tiene cuantificadores.
-\end{itemize}
-
-\subsection{¿Y qué tiene la Lógica de Predicados?}
-La lógica de predicados es una parte de la lógica de primer orden. La lógica de predicados nos va a permitir expresar ciertas estructuras las cuales no eramos capaces de expresar usando la lógica proposicional.
-
-\subsection{Predicados}
-Un predicado consiste en una proposicion abierta. El valor de verdad de un predicado dependerá del valor usado en la valuación. Generalmente, estos se simbolizan usando letras mayúsculas (Ej.: $P(x)$)\\
-Ejemplos de predicados:
-\begin{itemize}
-    \item $P(x)$ := x es par
-    \item $R(x)$ := x es primo
-    \item $M(x)$ := x es mortal
-\end{itemize}
-
-\subsubsection{Predicados n-arios}
-Los predicados n-arios consisten en predicados los cuales usan más de una variable para verificar su valor de verdad.\\
-Ejemplo: $O(x,y) := x \leq y $. Si $x = 2$ e $y = 3$, entonces $O(2,3) = 1$
-
-\subsubsection{Dominio de predicado}
-Todo predicado está restringido a un cierto dominio de evaluación. Esto significa que sus valores de verdad solo se pueden evaluar cuando las variables que se usan en el predicado estan dentro del dominio designado.
-Ej.: $O(x,y) := x \leq{} y$ sobre $\mathds{N}$
-
-\subsubsection{Predicado 0-ario / Predicado degenerado}
-Corresponde a un predicado que no tiene ninguna variable libre. Tiene un valor de verdad el cual es totalmente independiente de su valuación.
-
-\subsubsection{Predicados compuestos}
-Un predicado compuesto corresponde a la combinación de diversos predicados básicos, usando distintos operadores para mezclarlos en la sentencia, o la cuantificación universal o existencial de algun predicado (Véase \hyperref[sec:cuantificadores]{sección 9.3}). Todos los predicados deben tener el mismo dominio.
-
-\subsection{Cuantificadores}
-\label{sec:cuantificadores}
-\subsubsection{Cuantificador Universal}
-Consideremos $P(x, y_{1}, \ldots{}, y_{n})$ un predicado compuesto de dominio \textit{D}.\\
-El cuantificador universal corresponde a
-$$P'(y_{1}, \ldots{}, y_{n}) := \forall{} x . P(x, y_{1}, \ldots{}, y_{n})$$
-donde $x$ es la variable cuantificada e $y_{1}, \ldots{}, y_{n}$ son las variables libres.\\
-Si para cierta valuación se cumple que $P'(\ldots{}) = 1$ significa que para toda variable libre se cumple lo especificado anteriormente.\\
-\textbf{Ejemplo}
-$$O(x,y) := x \leq y \text{ sobre } \mathds{N}$$
-$$O'(y) := \forall x . O(x,y)$$
-$$O'(2) = \forall x. O(x,2) = 0$$
-Podemos notar que para $y = 2$, no se cumple para todo valor de $x$ lo dictado en el predicado $O(x,y)$
-$$O''(x) := \forall y . O(x,y)$$
-$$O''(0) := \forall y . O(0,y) = 1$$
-Si $x = 0$, debido a que estamos considerando a los naturales, entonces para todo valor de $y$ se cumple siempre el predicado.
-
-\subsubsection{Cuantificador Existencial}
-Consideremos $P(x, y_{1}, \ldots{}, y_{n})$ un predicado compuesto de dominio \textit{D}.\\
-El cuantificador existencial corresponde a
-$$P'(y_{1}, \ldots{}, y_{n}) := \exists x . P(x, y_{1}, \ldots{}, y_{n})$$
-donde $x$ es la variable cuantificada e $y_{1}, \ldots{}, y_{n}$ son las variables libres.\\
-Si para cierta valuación se cumple que $P'(\ldots{}) = 1$ significa que para alguna combinación de variables libres se cumple lo especificado anteriormente.\\
-\textbf{Ejemplo}
-$$O(x,y) := x \leq y \text{ sobre } \mathds{N}$$
-$$O'(y) := \exists x . O(x,y)$$
-$$O'(2) = \exists x. O(x,2) = 1$$
-
-\subsection{Interpretaciones}
-En algunos casos, puede ocurrir que algún predicado o formula, dependiendo de ciertas condiciones, sea verdadero(a)
-o falso(a). Debido a esto, vamos a definir las \textit{interpretaciones}.\\
-Para comenzar, es importante destacar que desde ahora diremos que $P(x_{1}, \ldots, x_{n})$ es un símbolo de predicado.\\
-Una interpretación $\mathcal{I}$ para símbolo de predicado $P_{1}, \ldots, P_{m}$ se compone de
-\begin{itemize}
-    \item Un dominio $\mathcal{I}(\text{dom})$
-    \item Para cada símbolo $P_{i}$, un predicado $\mathcal{I}(P_{i})$
-\end{itemize}
-Sea $\alpha{}(x_{1}, \ldots, x_{n})$ una formula y $\mathcal{I}$ una interpretación de los símbolos en $\alpha$. Se dice que la interpretación $\mathcal{I}$ satisface $\alpha$ sobre $a_{1}, \ldots, a_{n}$ en $\mathcal{I}(\text{dom})$, expresado como
-$$\mathcal{I} \models \alpha{}(a_{1}, \ldots, a_{n})$$
-si $\alpha{}(a_{1}, \ldots, a_{n})$ es verdadero al evaluar cada símbolo en $\alpha$ según $\mathcal{I}$. En el caso que $\mathcal{I}$ no logre satisfacer a $\alpha$, se anotará como
-$$\mathcal{I} \not\models \alpha{}(a_{1}, \ldots, a_{n})$$
-\textbf{Ejemplo}
-$$\mathcal{I}_{1}(\text{dom}) := \mathds{N}$$
-$$\mathcal{I}_{1}(P) := \text{x es par}$$
-$$\mathcal{I}_{1}(O) := x < y$$
-$$\alpha{}(x) := \exists y . P(y) \wedge O(x,y)$$
-$$\mathcal{I}_{1} \models \alpha{}(1) := \exists y. \text{y es par} \wedge 1 < y$$
-
-\section{Equivalencia lógica en Lógica de Predicados}
-Se tiene $\alpha{}(x_{1}, \ldots, x_{n})$ y $\beta{}(x_{1}, \ldots, x_{n})$ dos oraciones en lógica de predicados (no tienen variables libres). $\alpha$ y $\beta$ serán logicamente equivalentes, escrito como:
-$$\alpha \equiv \beta$$
-si para toda interpretación $\mathcal{I}$ y para todo $a_{1}, \ldots, a_{n}$ se cumple que:
-$$\mathcal{I} \models \alpha{}(a_{1}, \ldots, a_{n}) \text{ si, y solo si, } \mathcal{I} \models \beta{}(a_{1}, \ldots, a_{n})$$
-En otras palabras, funciona practicamente igual a la \hyperref[sec:equiv_logica]{equivalencia lógica en lógica 
-proposicional}.
-
-\subsection{Equivalencias lógicas}
-Todas las \hyperref[sec:equiv_logica_util]{equivalencias de lógica proposicional} aplican aquí. Simplemente se tienen que cambiar las variables proposicionales por predicados de lógica de predicados. Aquí se muestra un ejemplo:\\
-\textbf{Conmutatividad} (para operador $\wedge$)
-\[    
-    \begin{tabular}{|c|c|}
-        \hline
-        En lógica proposicional & En lógica de predicados\\ \hline
-        $p \wedge{} q \equiv{} q \wedge{} p$ & $\alpha{} \wedge{} \beta{} \equiv{} \beta{} \wedge{} \alpha{}$ \\ \hline
-    \end{tabular}
-\]
-Ahora, además de estas equivalencias, nos encontraremos con algunas nuevas
-\begin{enumerate}
-    \item $\neg \forall x . \alpha \equiv \exists x . \neg \alpha$
-    \item $\neg \exists x . \alpha \equiv \forall x . \neg \alpha$
-    \item $\forall x . (\alpha \wedge \beta) \equiv (\forall x . \alpha) \wedge (\forall x . \beta)$
-    \item $\forall x . (\alpha \vee \beta) \equiv (\forall x . \alpha) \vee (\forall x . \beta)$
-\end{enumerate}
-
-\section{Tautología en Lógica de Predicados}
-Sea $\alpha{}(x_{1}, \ldots, x_{n})$ una fórmula con variables libres $(x_{1}, \ldots, x_{n})$. $\alpha$ es tautología si para toda interpretación $\mathcal{I}$ y para todo $(a_{1}, \ldots, a_{n})$ en $\mathcal{I}(\text{dom})$ se tiene que:
-$$\mathcal{I} \models \alpha{}(a_{1}, \ldots, a_{n})$$
-
-\section{Consecuencia lógica en Lógica de Predicados}
-Una oración de lógica de predicados $\alpha$ es consecuencia lógica de un conjunto de oraciones $\Sigma$ si para toda interpretación $\mathcal{I}$ y para todo $(a_{1}, \ldots, a_{n})$ en $\mathcal{I}(\text{dom})$ se cumple que
-$$\text{si } \mathcal{I} \models \Sigma{}(a_{1}, \ldots, a_{n}) \text{ entonces } \mathcal{I} \models \alpha{}(a_{1}, \ldots, a_{n})$$
-Si $\alpha$ es consecuencia lógica de $\Sigma$, entonces se denota como
-$$\Sigma \models \alpha$$
-
-\section{Inferencia en Lógica de Predicados}
-\begin{enumerate}
-    \item \textbf{Instanciación Universal}
-    \[
-        \begin{tabular}{c}
-        $\forall{} x . \alpha{} (x)$ \\ \hline
-        $\alpha{} (a)$ para cualquier a
-        \end{tabular}
-    \]
-    \item \textbf{Generalización Universal}
-    \[
-        \begin{tabular}{c}
-            $\alpha{} (a)$ para cualquier a \\ \hline
-            $\forall{} x . \alpha{} (x)$
-        \end{tabular}
-    \]
-    \item \textbf{Instanciación Existencial}
-    \[
-        \begin{tabular}{c}
-        $\exists{} x . \alpha{} (x)$ \\ \hline
-        $\alpha{} (a)$ para algún a (nuevo)
-        \end{tabular}
-    \]
-    \item \textbf{Generalización Existencial}
-    \[
-        \begin{tabular}{c}
-        $\alpha{} (a)$ para algún a\\ \hline
-        $\exists{} x . \alpha{} (x)$
-        \end{tabular}
-    \]
-
-\end{enumerate}
-
-
-\section{Demostraciones}
-\subsection{Afirmación matemática}
-Una afirmación matemática consiste en una proposición en lógica de predicados
-\subsubsection*{Tipos de afirmaciones matemáticas}
-\begin{itemize}
-    \item Teorema: Afirmación matemática verdadera y demostrable.
-    \item Proposición: Similar a un Teorema, pero de menor importancia.
-    \item Definición: Sentencia usada para explicar la naturaleza de algún objeto matemático.
-    \item Axioma: Suposición que se considera cierta, y se usa como base para demostrar algo.
-    \item Lema: Proposición demostrada, usada como herramienta para demostrar un teorema.
-    \item Corolario: Teorema que se deduce de un axioma
-    \item Conjetura: Afirmación que es intuitivamente correcta, pero que no ha sido demostrada.
-    \item Problema: Conjetura, que podría ser verdadera o falsa. No se sabe su valor de verdad.
-\end{itemize}
-
-\subsection{¿Qué es una demostración?}
-Una demostración es un argumento válido que permite establecer la verdad de una afirmación matemática.\\
-Con argumento válido, nos referimos a una secuencia de argumentos que puede estar compuesta por
-\begin{itemize}
-    \item Axiomas.
-    \item Hipótesis o supuestos.
-    \item Afirmaciones implicadas por argumentos previos.
-\end{itemize}
-
-Cada argumento en la secuencia lógica de argumentos está conectado con el anterior por una \textit{regla de inferencia} (consecuencia lógica).\\
-El último paso de la secuencia establece la verdad de la afirmación.
-
-\subsubsection*{¿Qué NO es una demostración?}
-\begin{itemize}
-    \item Una secuencia de símbolos.
-    \item Una secuencia disconexa o imprecisa de argumentos.
-\end{itemize}
-Al final, la secuencia de argumentos debe ser lo más clara, precisa y completa posible, para así, convencer al lector u oyente, sin dar lugar a dudas acerca de la veracidad de la demostración.
-
-\subsection{¿Cómo puedo encontrar una secuencia de argumentos?}
-Si lo que se desea es encontrar una secuencia de argumentos que logre demostrar un teorema se requiere de las siguientes cosas
-\begin{itemize}
-    \item \textit{Experiencia}: La práctica hace al maestro.
-    \item \textit{Intuición}: Coloquialmente conocida como \textit{La cachativa}
-    \item \textit{Creatividad}: Pensar fuera de la caja
-    \item \textit{Perseverancia}: If at first you don't succeed, try, try again.
-    \item \textbf{Métodos de demostración}
-\end{itemize}
-
-\subsection{Métodos de demostración}
-\subsubsection{Demostración Directa}
-
-\subsubsection{Demostración por Contrapositivo}
-
-\subsubsection{Demostración por Contradicción}
-
-\subsubsection{Demostración por Análisis de Casos}
-
-\subsubsection{Demostración de Doble Implicación}
-
-\subsubsection{Demostración por contra-ejemplo}
-
-\subsubsection{Demostración Existencial}
-
-\subsubsection{Demostración por Inducción}
-
+%Macrosección de Lógica Proposicional
+\subfile{sections/lp.tex}
+
+%Macrosección de Lógica de Predicados
+\subfile{sections/logica_predicado.tex}
 
 %------Anexo---------------------
 \newpage
 
-\section{Anexo}
-\subsection{Ejercicio - Inferencia lógica de predicados}
-\[
-    \begin{tabular}{l}
-        Algún estudiante en la sala no estudió para el examen.\\
-        Todos los estudiantes de la sala pasaron el examen.\\ \hline
-        Algún estudiante pasó el examen y no estudió.
-    \end{tabular}
-\]
-¿Cómo modelamos este problema?
-$$S(x) := x \text{ está en la sala}$$
-$$E(x) := x \text{ estudió para el examen}$$
-$$X(x) := x \text{ pasó el examen}$$
-Entonces, la consecuencia lógica quedaría así:
-\[
-    \begin{tabular}{l}
-        $\exists{} x . S(x) \wedge{} \neg{} E(x)$\\
-        $\forall{} x . S(x) \rightarrow{} X(x)$\\ \hline
-        $\exists{} x . X(x) \wedge{} \neg{} E(x)$
-    \end{tabular}
-\]
-¿Cómo inferimos esta consecuencia lógica?
-\begin{enumerate}
-    \item $\exists x . S(x) \wedge \neg E(x)$ (Premisa)
-    \item $S(a) \wedge \neg E(a)$ (Instanciación Existencial 1.)
-    \item $S(a)$ (Simplificación Conjuntiva 2.)
-    \item $\forall x . S(x) \rightarrow X(x)$ (Premisa)
-    \item $S(a) \rightarrow X(a)$ (Instanciación Universal 4.)
-    \item $X(a)$ (Modus ponens 3. y 5.)
-    \item $\neg E(a)$ (Simplificación Conjuntiva 2.)
-    \item $X(a) \wedge \neg E(a)$ (Conjunción 6. y 7.)
-    \item $\exists x . X(x) \wedge \neg E(x)$ (Generalización Existencial 8.)
-\end{enumerate}
+\subfile{sections/anexo.tex}
 
 
 
